--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <div class="scene-grid" style="margin-top:14px">
         <section id="scene" class="scene"></section>
         <aside class="art" aria-hidden="true">
-          <img id="artImg" src="proyecto1.png" alt="imagen relacionada"/>
+          <img id="artImg" src="img/proyecto1b.png" alt="imagen relacionada"/>
         </aside>
       </div>
 
@@ -136,9 +136,9 @@
 <script>
 
   const IMAGES = {
-    proyecto: ['proyecto1b.png','proyecto2b.png','proyecto3b.png','proyecto4b.png'],
-    ia:       ['ia1b.png','ia2b.png','ia3b.png','ia4b.png'],
-    virtual:  ['virtual1b.png','virtual2b.png','virtual3b.png','virtual4b.png']
+    proyecto: ['img/proyecto1b.png','img/proyecto2b.png','img/proyecto3b.png','img/proyecto4b.png'],
+    ia:       ['img/ia1b.png','img/ia2b.png','img/ia3b.png','img/ia4b.png'],
+    virtual:  ['img/virtual1b.png','img/virtual2b.png','img/virtual3b.png','img/virtual4b.png']
   };
 
 
@@ -364,7 +364,7 @@ if (ratio >= 0.8) {
   `;
   $('#scene').innerHTML = html;
 
-  art.src = 'final.png';
+  art.src = 'img/final.png';
   document.querySelector('aside.art')?.classList.add('end');
 
   setModeResults();
@@ -395,4 +395,5 @@ if (ratio >= 0.8) {
 
 </body>
 </html>
+
 
